--- a/home.html
+++ b/home.html
@@ -4,14 +4,109 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Aries — Dashboard</title>
-  <style> html { overflow-y: scroll; } </style>
+
   <link rel="stylesheet" href="main.css">
+
+  <!-- Decorative fonts close to your slide.
+       If you have the exact font, replace these with your own @font-face or link. -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rye&family=Cinzel:wght@500;700&display=swap" rel="stylesheet">
+
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Keep scroll behaviour but allow our layout */
+    html { overflow-y: scroll; }
+
+    /* Hide the header logo so the top bar matches your image
+       (black bar with only hamburger at the left). */
+    .aries-brand {
+      display: none;
+    }
+
+    /* Main area takes the full height under the top bar and centers the content */
+    .page-wrapper {
+      min-height: calc(100vh - 56px); /* adjust if your top bar height is different */
+      display: flex;
+      align-items: center;     /* vertical center */
+      justify-content: center; /* horizontal center of the whole block */
+    }
+
+    .aries-hero {
+      width: 100%;
+      max-width: 1100px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .aries-title-block {
+      margin-left: 140px; /* pushes the text in from the left like your slide */
+    }
+
+    .aries-title {
+      margin: 0;
+      font-size: 90px; /* big like the slide */
+      font-family: "Rye", "Times New Roman", serif; /* replace with exact font if you have it */
+      font-weight: 400;
+    }
+
+    .aries-subtitle {
+      margin: 20px 0 0;
+      font-size: 32px;
+      font-family: "Cinzel", "Times New Roman", serif;
+      color: #555555; /* grey like in the image */
+    }
+
+    .aries-hero-logo {
+      width: 380px;  /* big ram head */
+      height: auto;
+      margin-right: 140px; /* pulls it in from the right edge like your slide */
+      object-fit: contain;
+    }
+
+    /* Optional: don’t let it break too badly on small screens */
+    @media (max-width: 900px) {
+      .page-wrapper {
+        min-height: auto;
+        padding: 40px 20px;
+        align-items: flex-start;
+      }
+      .aries-hero {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+      .aries-title-block,
+      .aries-hero-logo {
+        margin: 0;
+      }
+      .aries-title {
+        font-size: 56px;
+        text-align: center;
+      }
+      .aries-subtitle {
+        text-align: center;
+      }
+      .aries-hero-logo {
+        margin-top: 24px;
+        width: 260px;
+      }
+    }
+  </style>
 </head>
 <body>
 <header class="aries-topbar">
   <button id="aries-hamburger" class="aries-hamburger" aria-label="Open sidebar">☰</button>
-  <!-- no PROJECT MANAGER text here per your earlier request -->
-  <a href="home.html" class="aries-brand"><img src="goat.png" alt="Aries Logo" class="aries-logo"></a>
+  <!-- brand logo hidden via CSS above -->
+  <a href="home.html" class="aries-brand">
+    <img src="goat.png" alt="Aries Logo" class="aries-logo">
+  </a>
 </header>
 
 <div id="aries-overlay" class="hidden" aria-hidden="true"></div>
@@ -20,13 +115,13 @@
 </aside>
 
 <main class="page-wrapper">
-  <div style="max-width:1100px;margin:0 auto;padding:40px 20px;">
-    <div style="display:flex;align-items:center;justify-content:space-between;">
-      <h1 style="margin:0;font-size:64px;font-family:'Montserrat', Arial, sans-serif">ARIES</h1>
-      <img src="goat.png" alt="logo" style="width:260px;height:260px;object-fit:contain;">
+  <section class="aries-hero">
+    <div class="aries-title-block">
+      <h1 class="aries-title">Aries</h1>
+      <p class="aries-subtitle">King</p>
     </div>
-    <p style="margin-top:28px;color:#6b7280;font-size:18px">King</p>
-  </div>
+    <img src="goat.png" alt="Aries logo" class="aries-hero-logo">
+  </section>
 </main>
 
 <script type="module">
